--- a/.gitignore
+++ b/.gitignore
@@ -167,5 +167,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+charts/*.png
+
 # PyPI configuration file
 .pypirc
